# OpenStorage

./: .gitignore  ABSTRACTIONS.md  API.md  Cargo.toml  DESIGN.md  FUTURE_IMPROVEMENTS.md  PLUGIN_SDK.md  README.md  RESILIENCE.md  ROUTING.md  STATES_AND_FLOWS.md  STRUCTURAL_REWORK.md  THREAT_MODEL.md
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml  FLOW.md
cli/src/: main.rs
cli/tests/: all_flows.rs  file_ops.rs  maintenance.rs  multidevice.rs  optimistic_cas_quorum.rs  plugin_ban_recovery.rs  plugin_ban_replacement.rs  plugins.rs  restart_survival.rs  security_closure.rs  sharing.rs  supervisor_drives_workers.rs  weak_cas_safety.rs
cli/tests/common/: mod.rs
docs/: CLI_FLOW_TEST_RESULTS.md  CLI_STATE_COVERAGE.md
fuse/: FLOW.md
gui/: FLOW.md
plugins/: FLOW.md
plugins/bashupload/: Cargo.toml
plugins/bashupload/src/: lib.rs
plugins/catbox/: Cargo.toml
plugins/catbox/src/: lib.rs
plugins/discord/: Cargo.toml
plugins/discord/src/: lib.rs
plugins/fault_inject/: Cargo.toml
plugins/fault_inject/src/: lib.rs
plugins/filebin/: Cargo.toml
plugins/filebin/src/: lib.rs
plugins/github_repo/: Cargo.toml
plugins/github_repo/src/: lib.rs
plugins/http_backend/: Cargo.toml
plugins/http_backend/src/: lib.rs
plugins/litterbox/: Cargo.toml
plugins/litterbox/src/: lib.rs
plugins/oshi/: Cargo.toml
plugins/oshi/src/: lib.rs
plugins/paste_rs/: Cargo.toml
plugins/paste_rs/src/: lib.rs
plugins/pixeldrain/: Cargo.toml
plugins/pixeldrain/src/: lib.rs
plugins/pomf_clone/: Cargo.toml
plugins/pomf_clone/src/: lib.rs
plugins/telegram/: Cargo.toml
plugins/telegram/src/: lib.rs
plugins/telegraph/: Cargo.toml
plugins/telegraph/src/: lib.rs
plugins/temp_sh/: Cargo.toml
plugins/temp_sh/src/: lib.rs
plugins/x0clone/: Cargo.toml
plugins/x0clone/src/: lib.rs
plugins/zerox_st/: Cargo.toml
plugins/zerox_st/src/: lib.rs
scripts/: baseline_1gb.sh  baseline_all_layers.sh  cli_flow_tests.sh  cli_state_coverage.sh  providers.example.json  test_cli.sh  test_many_providers.sh  test_messaging_backend.sh  test_real_world_10mb.sh  test_replication.sh
src/: MODULES.md
src/antientropy/: Cargo.toml  FLOW.md
src/antientropy/src/: lib.rs
src/api/: Cargo.toml  FLOW.md
src/api/src/: lib.rs
src/bloom/: Cargo.toml  FLOW.md
src/bloom/src/: lib.rs
src/chunk/: Cargo.toml  FLOW.md
src/chunk/src/: lib.rs
src/crypto/: Cargo.toml  FLOW.md
src/crypto/src/: aead.rs  hash.rs  kdf.rs  kem.rs  lib.rs  sig.rs  subkey.rs
src/ec/: Cargo.toml  FLOW.md
src/ec/src/: lib.rs
src/entities/: Cargo.toml  FLOW.md
src/entities/proptest-regressions/: crdt.txt
src/entities/src/: crdt.rs  lib.rs  records.rs  wal_entry.rs
src/events/: Cargo.toml  FLOW.md
src/events/src/: lib.rs
src/identity/: Cargo.toml  FLOW.md
src/identity/src/: lib.rs
src/keystore/: Cargo.toml  FLOW.md
src/keystore/src/: binding.rs  lib.rs  memory.rs  system.rs
src/lease/: Cargo.toml  FLOW.md
src/lease/src/: lib.rs
src/merkle/: Cargo.toml  FLOW.md
src/merkle/src/: lib.rs
src/metadata/: Cargo.toml  FLOW.md
src/metadata/src/: backend.rs  cf.rs  lib.rs  store.rs
src/placement/: Cargo.toml  FLOW.md
src/placement/src/: lib.rs
src/plugin_host/: Cargo.toml  FLOW.md
src/plugin_host/src/: abuse_sensor.rs  account_rotator.rs  capability_drift.rs  circuit_breaker.rs  contract.rs  host.rs  idempotency_tracker.rs  lib.rs  lifecycle.rs  local_dir.rs  pool.rs  rate_limit.rs  recording.rs  slotpool.rs
src/plugin_host/src/http/: client.rs  error.rs  mod.rs  ratelimit.rs
src/plugin_host/tests/: auto_health_recording.rs
src/recovery/: Cargo.toml  FLOW.md
src/recovery/src/: lib.rs
src/repair/: Cargo.toml  FLOW.md
src/repair/src/: lib.rs
src/share/: Cargo.toml  FLOW.md
src/share/src/: lib.rs
src/supervisor/: Cargo.toml
src/supervisor/src/: lib.rs
src/sync/: Cargo.toml  FLOW.md
src/sync/src/: lib.rs
src/types/: Cargo.toml  FLOW.md
src/types/src/: crypto.rs  error.rs  health.rs  ids.rs  lib.rs  plugin.rs  serde_helpers.rs  time.rs  trust.rs
src/vault/: Cargo.toml  FLOW.md
src/vault/src/: lib.rs
src/vfs/: Cargo.toml  FLOW.md
src/vfs/src/: lib.rs  redundancy_tests.rs
src/wal/: Cargo.toml  FLOW.md
src/wal/src/: hlc.rs  lib.rs  log.rs  policy.rs
testbench/: server.py
testbench/static/: index.html
