[workspace]
resolver = "2"
members = [
    "src/types",
    "src/entities",
    "src/crypto",
    "src/keystore",
    "src/metadata",
    "src/wal",
    "src/ec",
    "src/chunk",
    "src/placement",
    "src/bloom",
    "src/merkle",
    "src/events",
    "src/identity",
    "src/lease",
    "src/share",
    "src/recovery",
    "src/vault",
    "src/sync",
    "src/repair",
    "src/antientropy",
    "src/plugin_host",
    "src/vfs",
    "src/api",
    "app",
    "cli",
    "plugins/http_backend",
    "plugins/fault_inject",
    "plugins/zerox_st",
    "plugins/telegram",
    "plugins/discord",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
ciborium = "0.2"
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
hex = "0.4"
base32 = "0.5"
zeroize = { version = "1", features = ["derive"] }
blake3 = "1"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"
sled = "0.34"
reed-solomon-erasure = "6"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3"

os-types = { path = "src/types" }
os-entities = { path = "src/entities" }
os-crypto = { path = "src/crypto" }
os-keystore = { path = "src/keystore" }
os-metadata = { path = "src/metadata" }
os-wal = { path = "src/wal" }
os-ec = { path = "src/ec" }
os-chunk = { path = "src/chunk" }
os-placement = { path = "src/placement" }
os-bloom = { path = "src/bloom" }
os-merkle = { path = "src/merkle" }
os-events = { path = "src/events" }
os-identity = { path = "src/identity" }
os-lease = { path = "src/lease" }
os-share = { path = "src/share" }
os-recovery = { path = "src/recovery" }
os-vault = { path = "src/vault" }
os-sync = { path = "src/sync" }
os-repair = { path = "src/repair" }
os-antientropy = { path = "src/antientropy" }
os-plugin-host = { path = "src/plugin_host" }
os-vfs = { path = "src/vfs" }
os-api = { path = "src/api" }
os-plugin-http-backend = { path = "plugins/http_backend" }
os-plugin-fault-inject = { path = "plugins/fault_inject" }
os-plugin-zeroxst = { path = "plugins/zerox_st" }
os-plugin-telegram = { path = "plugins/telegram" }
os-plugin-discord = { path = "plugins/discord" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
