[package]
name = "openstorage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "openstorage"
path = "src/main.rs"

[dependencies]
os-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
os-types = { workspace = true }
os-crypto = { workspace = true }
os-metadata = { workspace = true }
os-wal = { workspace = true }
os-sync = { workspace = true }
os-vault = { workspace = true }
os-vfs = { workspace = true }
os-placement = { workspace = true }
os-identity = { workspace = true }
os-recovery = { workspace = true }
os-plugin-host = { workspace = true }
os-plugin-http-backend = { workspace = true }
os-plugin-fault-inject = { workspace = true }
os-plugin-zeroxst = { workspace = true }
os-plugin-telegraph = { workspace = true }
os-plugin-github-repo = { workspace = true }
os-plugin-telegram = { workspace = true }
os-plugin-discord = { workspace = true }
os-plugin-catbox = { workspace = true }
os-plugin-paste-rs = { workspace = true }
os-plugin-filebin = { workspace = true }
ciborium = { workspace = true }
serde_json = { workspace = true }
os-lease = { workspace = true }
os-repair = { workspace = true }
os-events = { workspace = true }
os-entities = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
