[package]
name = "openstorage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
anyhow = "1"
indicatif = "0.17"
blake3 = { workspace = true }
bytes = { workspace = true }
