[package]
name = "openstorage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
anyhow = "1"
indicatif = "0.17"
blake3 = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
axum = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
os-api = { path = "../src/api" }
os-crypto = { path = "../src/crypto" }
os-events = { path = "../src/events" }
os-identity = { path = "../src/identity" }
os-lease = { path = "../src/lease" }
os-metadata = { path = "../src/metadata" }
os-plugin-host = { path = "../src/plugin_host" }
os-recovery = { path = "../src/recovery" }
os-repair = { path = "../src/repair" }
os-share = { path = "../src/share" }
ciborium = { workspace = true }
os-sync = { path = "../src/sync" }
os-types = { path = "../src/types" }
os-vault = { path = "../src/vault" }
os-vfs = { path = "../src/vfs" }
os-wal = { path = "../src/wal" }
