[package]
name = "os-plugin-fault-inject"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-plugin-host = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
