[package]
name = "os-plugin-http-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-plugin-host = { workspace = true }
os-crypto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
