[package]
name = "os-plugin-http-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-plugin-host = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
