[package]
name = "os-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-vfs = { workspace = true }
os-vault = { workspace = true }
os-identity = { workspace = true }
os-share = { workspace = true }
os-recovery = { workspace = true }
os-plugin-host = { workspace = true }
os-events = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
os-crypto = { workspace = true }
os-metadata = { workspace = true }
os-sync = { workspace = true }
os-wal = { workspace = true }
rand = { workspace = true }
