[package]
name = "os-chunk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-crypto = { workspace = true }
os-ec = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
