[package]
name = "os-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
serde = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
