[package]
name = "os-entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
rand = { workspace = true }
uuid = { workspace = true }
