[package]
name = "os-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
os-keystore = { workspace = true }
os-metadata = { workspace = true }
os-wal = { workspace = true }
os-events = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base32 = { workspace = true }
