[package]
name = "os-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
