[package]
name = "os-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
os-metadata = { workspace = true }
os-events = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
