[package]
name = "os-recovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
os-keystore = { workspace = true }
os-metadata = { workspace = true }
os-wal = { workspace = true }
os-identity = { workspace = true }
os-events = { workspace = true }
os-plugin-host = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
os-vault = { workspace = true }
rand = { workspace = true }
