[package]
name = "os-share"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
os-metadata = { workspace = true }
os-identity = { workspace = true }
os-events = { workspace = true }
os-wal = { workspace = true }
thiserror = { workspace = true }
