[package]
name = "os-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

os-types = { workspace = true }
os-metadata = { workspace = true }
os-entities = { workspace = true }
os-repair = { workspace = true }
os-plugin-host = { workspace = true }
os-events = { workspace = true }
ciborium = { workspace = true }
