[package]
name = "os-wal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
os-types = { workspace = true }
os-entities = { workspace = true }
os-crypto = { workspace = true }
os-keystore = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
uuid = { workspace = true }
